# RTSP_Morse

./: .gitignore  LICENSE  README.md  StreamProcessing.code-workspace  start_stream.sh
MicrophoneToMorse/: README.md  audio_consumer.py  audio_producer.py  pyproject.toml
MicrophoneToMorse/audio_app/: consumer.py  digitalizer.py  digitalizer_visualizer.py  goertzel.py  goertzel_visualizer.py  main.py  operator.py  producer.py  sink.py  utils.py  visualizer.py
MicrophoneToMorse/protos/: audio_chunk.proto  digital_frame.proto  morse_frame.proto
Misc/: melanocetus.json
SoundToMorse/: .gitignore  docker-compose.yml
SoundToMorse/audio_app/: goertzel.py  morser.py  morser_visualizer.py  visualizer.py
SoundToMorse/protos/: morse_symbol.proto
SoundToMorseToText/: protocoll.py  sr_sender.py
SpeechToText/: Melanocetus.sln
SpeechToText/Melanocetus/: consumer_text.py
SpeechToText/Melanocetus/App/: AppMetrics.cs  MelanocetusApp.cs  (+1 more)
StreamingEx/StreamingEx/: ContentView.swift  Info.plist  KafkaConfig.swift  KafkaConfigView.swift  KafkaRESTClient.swift  Morse.swift  SimpleKafkaClient.swift  StreamService.swift  StreamTestView.swift  StreamingExApp.swift  WebSocketClient.swift
StreamingEx/StreamingEx.xcodeproj/: project.pbxproj
TextToSound/: README.md  docker-compose.yml  start.sh
TextToSound/backend/: constants.py  main.py  publish.py  pyproject.toml  websocket_bridge.py
TextToSound/frontend/: package.json
VisualStudioProject/Melanocetus/: Melanocetus.csproj
python_sr_morse_text/: morse_symbol_pb2.py  protocoll.py  pyproject.toml  sr_sender.py  testing.py
(+39 files in other folders)
